# for display continuity sake please use 2 spaces instead of tabs

2012-02-18 mmichaud <michael.michaud@free.fr>
  * Simplify error management in BufferPlugIn

2012-02-12 mmichaud <michael.michaud@free.fr>
  * Reactivated the North-Arrow plugin (in view menu)

2012-01-25 sstein <sstein@geo.uzh.ch>
  * adjusted terminology:
    - "Overlay Polygon Layers" to "Polygon Overlay", with the 
    latter being the formal term
    - "Spatial Join" to "Spatial Join (Transfer Attributes)" to be 
    consistent as the item was renamed first (original name: "Transfer Attributes") 
    and then moved to a different menu (Edit Attributes -> Analysis), 
    so users would not find it without testing all functions.

2012-01-25 mmichaud <michael.michaud@free.fr>
  * Pack "Save dataset as" dialog box when the format is changed otherwise, 
    when format shows new options, parts of the dialog could be hidden
  
2012-01-22 Matthias Scholz <ms@jammerhund.de>
  * SuperZoomPanTool:
    - some fixes
    - I18N
	- Icon and cursor
  * JUMPConfiguration
    - SuperZoomPanTool activated for testing

2012-01-21 mmichaud <michael.michaud@free.fr>
  * Fixed I18N.getMessage() method

2012-01-19 Matthias Scholz <ms@jammerhund.de>
  * AbstractCursorTool.getGraphics2D()
    Small fix/workaround for the Linux painting/ screen refresh problem during
    Shape movement.

2012-01-15 mmichaud <michael.michaud@free.fr>
    * Optimization of DeleteDuplicateItemsPlugIn + unit test
    * added a unit-test target in ant build file
      
2012-01-14 mmichaud <michael.michaud@free.fr>
    * Fix two small language issues in 
      ReplicateSelectedItemsPlugIn and CreateThiessenPolygonsPlugIn
      
2012-01-13 benjamin gudehus
    * added a unit test framework made of
      - org.openjump.test package
      - fixtures directory for datasets

2012-01-11 mmichaud <michael.michaud@free.fr>
    * Fixed bugs in
      - ClipToFencePlugIn [3472008] two identical attribute names not accepted.